--- a/admin/templ/secTools.html
+++ b/admin/templ/secTools.html
@@ -1,3 +1,3 @@
 <div class="btn-group pull-right">
-    <button class="btn btn-success btn-sm" ng-click="newNote()"><i class="fa fa-plus"></i> New User</button>
+    <button class="btn btn-success btn-sm" ng-click="openNewUser()"><i class="fa fa-plus"></i> New User</button>
 </div>
