--- a/templ/columnMap.html
+++ b/templ/columnMap.html
@@ -1,7 +1,7 @@
 <div style="position: relative" ng-controller="exportctrl">
 
 <div style="position: relative;margin: auto;min-height: 40px;">
-    <div class="mkToolBtn"><mk-upload label="Upload File" path="file/upload" fnc="onImportUploaded($event)"></mk-upload></div>
+    <div class="mkToolBtn"><mk-upload label="Upload File" path="upload/file" fnc="onImportUploaded($event)"></mk-upload></div>
     <div class="mkToolBtn"><a ng-click="importData()">Import Data</a></div>
     <div class="mkToolBtn"><a ng-click="defineDefs()">Defaults Values</a></div>
 </div>
