fixes to recommendations

--- a/admin/templ/adminprofile.html
+++ b/admin/templ/adminprofile.html
@@ -35,7 +35,7 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <a href="#">
-                                <span class="m-b-xs h4 block">45</span>
+                                <span class="m-b-xs h4 block">{{logins}}</span>
                                 <small class="text-muted">Logins</small>
                             </a>
                         </div>
