--- a/admin/templ/tenantDetail.html
+++ b/admin/templ/tenantDetail.html
@@ -35,8 +35,8 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <a href="#">
-                                <span class="m-b-xs h4 block">45</span>
-                                <small class="text-muted">Logins</small>
+                                <span class="m-b-xs h4 block">2</span>
+                                <small class="text-muted">Apps</small>
                             </a>
                         </div>
                         <div class="col-xs-4">
