--- a/admin/templ/genericNew.html
+++ b/admin/templ/genericNew.html
@@ -1,3 +1,12 @@
+<section class="panel panel-default">
+    <div class="row m-l-none m-r-none">
+        <div class="col-lg-6">
+            <h3 class="m-b-none">{{viewTitle}}</h3>
+        </div>
+        <div class="col-lg-6" ng-include="subTools">
+        </div>
+    </div>
+</section>
 <div class="row">
     <div class="col-sm-6">
         <section class="panel panel-default">
@@ -5,21 +14,9 @@
             <div class="panel-body">
                 <form role="form">
                     <div dynamic="propsEl"></div>
-                    <!--<div class="form-group">-->
-                        <!--<label>Email address</label>-->
-                        <!--<input type="email" class="form-control" placeholder="Enter email">-->
-                    <!--</div>-->
-                    <!--<div class="form-group">-->
-                        <!--<label>Password</label>-->
-                        <!--<input type="password" class="form-control" placeholder="Password">-->
-                    <!--</div>-->
-                    <!--<div class="checkbox">-->
-                        <!--<label>-->
-                            <!--<input type="checkbox"> Check me out-->
-                        <!--</label>-->
-                    <!--</div>-->
                     <button ng-click="saveNewObj()" class="btn btn-s-md btn-primary pull-right-lg">Submit</button>
                 </form>
             </div>
         </section>
     </div>
+</div>
