--- a/admin/templ/seglist.html
+++ b/admin/templ/seglist.html
@@ -80,21 +80,17 @@
                     <a href="#"> <i class="fa fa-bullseye fa-stack-1x text-white"></i>
                     </a>
                     <div class="clear">
-
                         <div class="h3 m-t-xs m-b-xs text-white"> {{rule.name}}
                             <ul class="nav nav-pills pull-right">
-                                <li> <a href="#" ng-click="editRule(rule)" class="text-muted"><i class="fa fa-pencil"></i></a>
+                                <li> <a href="#" ng-click="editRule(rule)" class="panel-toggle text-muted"><i class="fa fa-pencil"></i></a>
                                 </li>
                                 <li> <a href="#" ng-click="cloneRule(rule)" class="text-muted"><i class="fa fa-copy"></i></a>
                                 </li>
                                 <li> <a href="#" ng-click="deleteRule(rule)" class="text-muted"><i class="fa fa-times"></i></a>
                                 </li>
-                                <li> <a href="#" class="panel-toggle text-muted"><i class="fa fa-caret-down text"></i><i class="fa fa-caret-up text-active"></i></a>
-                                </li>
                             </ul>
                             <!--<i class="fa fa-circle text-white pull-right text-xs m-t-sm"></i>-->
                         </div>
-                        <small class="text-muted">Rule</small>
                         <div class="col-xs-4">
                             <div class="padder-v">
                                 <span class="m-b-xs h3 block text-white">{{rule.limit}}</span>
@@ -105,13 +101,52 @@
                 </div>
             </header>
             <section class="panel-body collapse">
+                <section class="panel panel-default">
+                    <header class="panel-heading font-bold">Properties</header>
+                    <div class="panel-body collapse">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" ng-model="rule.name" placeholder="Description">
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label>In effect</label>
+                                    <input type="checkbox" class="form-control" ng-model="rule.active">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label>Limit</label>
+                                    <div class="spinner input-group" data-min="1" data-max="10">
+                                        <input type="text" class="form-control spinner-input" ng-model="rule.limit" maxlength="10" placeholder="Number of records">
+                                        <div class="btn-group btn-group-vertical input-group-btn">
+                                            <button type="button" class="btn btn-default spinner-up"> <i class="fa fa-chevron-up text-muted"></i> </button>
+                                            <button type="button" class="btn btn-default spinner-down"> <i class="fa fa-chevron-down text-muted"></i> </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label>Global</label>
+                                    <input type="checkbox" class="form-control" ng-model="rule.global">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div class="row">
                     <div class="col-lg-5">
+                        <div class="btn btn-small" ng-click="createSegment(rule)"><i class="fa fa-plus"></i></div>
                         <div class="list-group no-radius alt">
                             <div ui-sortable="sortableOptions" ng-model="rule.conds">
                                 <a class="list-group-item" href="#" ng-repeat="dem in rule.dems">
-                                    <span class="badge bg-success">{{dem.val}}</span>
-                                    <i class="fa fa-comment icon-muted"></i> {{dem.title}}
+                                    <span class="badge bg-danger" ng-click="deleteSegment(rule, dem)">x</span>
+                                    <i class="fa icon-muted"></i> {{dem.title}}
                                 </a>
                             </div>
                         </div>
@@ -120,11 +155,12 @@
                         <img width="30" height="30" src="/images/arrow-right.png">
                     </div>
                     <div class="col-lg-5">
+                        <div class="btn btn-small" ng-click="createProdRule(rule)"><i class="fa fa-plus"></i></div>
                         <div class="list-group no-radius alt">
                             <div ui-sortable="sortableOptions" ng-model="rule.conds">
                                 <a class="list-group-item" href="#" ng-repeat="cond in rule.conds">
-                                    <span class="badge bg-success">{{cond.val}}</span>
-                                    <i class="fa fa-comment icon-muted"></i> {{cond.title}}
+                                    <span class="badge bg-danger" ng-click="deleteProdRule(rule, cond)">x</span>
+                                    <i class="fa icon-muted"></i> {{cond.title}}
                                 </a>
                             </div>
                         </div>
