--- a/admin/templ/steplisthor.html
+++ b/admin/templ/steplisthor.html
@@ -36,6 +36,15 @@
         <!--&lt;!&ndash;</div>&ndash;&gt;-->
     <!--&lt;!&ndash;</div>&ndash;&gt;-->
 <!--</div>-->
+<section class="panel panel-default">
+    <div class="row m-l-none m-r-none">
+        <div class="col-lg-6">
+            <h3 class="m-b-none">{{viewTitle}}</h3>
+        </div>
+        <div class="col-lg-6" ng-include="subTools">
+        </div>
+    </div>
+</section>
 
 <section class="hbox stretch">
     <!-- .aside -->
@@ -53,14 +62,14 @@
                             <div class="panel bg-primary lter no-borders">
                                 <div class="panel-body">
                                     <span class="timeline-icon"><i class="fa fa-th-large time-icon bg-primary"></i></span>
-                                    <span class="h3 timeline-date">{{a.agent}}</span>
+                                    <span class="h3 timeline-date">UX flow ({{a.agent}})</span>
                                     <h3>
                                         <span>{{a.name}}</span>
                                     </h3>
                                     <div class="m-t-sm timeline-action">
                                         <span class="pull-left m-r-sm"><a>Active <input type="checkbox" ng-model="a.active"></a></span>
                                         <button class="btn btn-sm btn-default btn-bg" ng-click="cloneApp(a)"><i class="fa fa-copy"></i> Copy</button>
-                                        <button class="btn btn-sm btn-default btn-bg" ng-click="createStep()"><i class="fa fa-check"></i> New Widget</button>
+                                        <button class="btn btn-sm btn-default btn-bg" ng-click="createStep(a, appElements[a.appID])"><i class="fa fa-check"></i> New Widget</button>
                                     </div>
                                 </div>
                             </div>
@@ -71,11 +80,11 @@
                         <div class="timeline-caption">
                             <div class="panel panel-default">
                                 <div class="panel-body">
+                                    <a href="#" ng-click="deleteStep(p, appElements[a.appID])" class="pull-right"><i class="fa fa-times"></i></a>
                                     <span class="arrow left"></span>
-                                    <span class="timeline-icon"><i class="fa fa-file time-icon bg-primary"></i></span>
-                                    <span class="timeline-date">{{p.title}}</span>
+                                    <span class="timeline-icon"><a href="#" ng-click="openWidgetDetail(p)"><i class="fa fa-file time-icon bg-primary"></i></a></span>
+                                    <span class="timeline-date"><a href="#" ng-class="{'btn btn-sm btn-default btn-rounded': p.visible,'btn btn-sm btn-default btn-rounded disabled': !p.visible}" ng-click="openWidgetDetail(p)"><h5>{{p.title}}</h5></a></span>
                                     <p>
-                                        <span ng-class="{'stepactive': p.visible,'': !p.visible}" ng-click="openWidgetDetail(p)">{{p.title}}</span>
                                         {{p.desc}}
                                     </p>
                                 </div>
