--- a/admin/templ/survey.html
+++ b/admin/templ/survey.html
@@ -54,8 +54,9 @@
                     <div ui-sortable="sortableOptions" ng-model="queMap">
                         <article class="timeline-item" ng-repeat="q in queMap">
                             <div class="timeline-caption">
-                                <div ng-class="{'panel sub1 panel-default': q.parentID,'panel panel-default': !q.parentID}">
+                                <div ng-class="{'subpanel1 panel-default': q.parentID,'panel panel-default': !q.parentID}">
                                     <div class="panel-body">
+                                        <a href="#" class="pull-right" ng-click="deleteQue(q)"><i class="fa fa-times-circle"></i></a>
                                         <span class="arrow left"></span>
                                         <span class="timeline-icon"><i ng-class="{'fa fa-chain time-icon': q.parentID,'fa fa-question time-icon bg-primary': !q.parentID}"></i></span>
                                         <span class="timeline-date"></span>
@@ -66,7 +67,7 @@
                                 </div>
                             </div>
                         </article>
-                        <div class="timeline-footer"><a href="#" ng-click="createStep()"><i class="fa fa-plus time-icon inline-block bg-dark"></i></a></div>
+                        <div class="timeline-footer"><a href="#" ng-click="newQuestion()"><i class="fa fa-plus time-icon inline-block bg-dark"></i></a></div>
                     </div>
                 </div>
             </section>
