--- a/portal.html
+++ b/portal.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="admin/css/animate.css" type="text/css" />
     <link rel="stylesheet" href="admin/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="admin/css/font.css" type="text/css" />
+    <link rel="stylesheet" href="admin/js/fuelux/fuelux.css" type="text/css" />
     <link rel="stylesheet" href="admin/js/select2/select2.css" type="text/css" />
     <link rel="stylesheet" href="admin/js/nestable/nestable.css" type="text/css">
     <link rel="stylesheet" href="admin/css/app.css" type="text/css" />
